# efs

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  COVERAGE_ANALYSIS.md  README.md  STATUS.md  deploy_modal.py  package-lock.json  package.json  wrangler.jsonc
app/: ems-api.mjs  examples.mjs  geometry-viewer.mjs  index.html  radiation-viewer.mjs  sim-worker.js  test-url-share.mjs
docs/: design-compliance-review.md  openems-web-port-research.md  phase-6-completeness-review.md  research-vs-phases-coverage-review.md
docs/phases/: phase-0-build-infrastructure.md  phase-1-wasm-mvp.md  phase-2-ts-api-visualization.md  phase-3-webgpu-acceleration.md  phase-4-gpu-extensions.md  phase-5-threading-nf2ff-scale.md  phase-6-polish-ecosystem.md
docs/plans/: 2026-03-27-wasm-webgpu-perf-tdd.md
examples/: compare_native.mjs  compare_native.py  msl_notch_filter.html  msl_notch_filter.mjs  msl_notch_filter_gpu.html  msl_test.mjs  patch_antenna.html  patch_antenna.mjs  patch_antenna_test.mjs  rect_waveguide.html  rect_waveguide.mjs  run_browser_test.mjs  waveguide_test.mjs
scripts/: build-native-deps.sh  build-wasm-deps.sh  build-wasm.sh  build-wasm64.sh  run-node-sim.mjs  run_uwb_native.mjs
scripts/lib/: node-wasm.mjs  plot-utils.mjs  post-process.mjs  sim-engine.mjs
specs/: vendor-openems-changes.patch
src/: analysis.mjs  automesh.mjs  csxcad_bindings.cpp  embind_api.cpp  nf2ff.mjs  ports.mjs  sar.mjs  simulation.mjs  types.mjs  url-share.mjs  visualization.mjs  wasm-gpu-bridge.mjs  webgpu-engine.mjs  webgpu-fdtd.mjs
src/shaders/: excitation.wgsl  lorentz_ade.wgsl  lumped_rlc.wgsl  mur_abc.wgsl  pbc_copy.wgsl  probe.wgsl  steady_state.wgsl  tfsf.wgsl  update_current.wgsl  update_pml.wgsl  update_voltage.wgsl
tests/: bench_native.py  generate_fixtures.py  test_api.mjs  test_app_browser.mjs  test_wasm.mjs  test_webgpu.mjs  test_webgpu_browser.mjs  validate_test_counts.mjs
tests/browser/: all-tests.html  run-all.mjs
tests/fixtures/: constants.json  native_bench.json
tests/fixtures/cavity/: probe_ut1z.csv  reference.json
tests/fixtures/coax/: probe_it1.csv  probe_ut1.csv  reference.json
tests/fixtures/dipole/: probe_et1.csv  probe_et2.csv  probe_ht1.csv  probe_ht2.csv  reference.json
tests/fixtures/engine_comparison/: comparison.json  probe_vp_sse-compressed.csv  reference.json
tests/webgpu/: index.html
